Second Normalization Added

--- a/Database Normalization I.ipynb
+++ b/Database Normalization I.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "### Database Normalization\n",
     "\n",
-    "In this post I am going to normalize [Unesco Heritage Sites](https://whc.unesco.org/en/list/) data which is originally in spreadsheet form."
+    "In this post I am going to normalize [Unesco Heritage Sites](https://whc.unesco.org/en/list/) data which is originally in spreadsheet form.\n",
+    "\n",
+    "For this case, I will import data from spreadsheet into unesco_raw table, and then I will create and populate tables following NF rules."
    ]
   },
   {
